fix dark mode

--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -11,9 +11,3 @@
 .dark .dark\:bg-product-dark{
     background-color: #242526;
 }
-@media print {
-nav,
-footer{
-    display:none;
-}
-}
